--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
 	<title>Tugas 1</title>
 </head>
 <body>
-	 <h1>Ade Juhanas</h1>
+	<h1>Ade Juhanas</h1>
 	<h1>Web Developer</h1><hr />
+	<h1>Profile</h1>
+	<p>Assalamualaikum Perkenalkan nama saya Ade Juhanas, saya berasal dari concong luar, indragiri hilir, riau, asal sekolah saya SMKN 1 Tembilahan</p>
+	<p>
+		Saya Adalah Seorang full stack deeloper web dengan pengalaman kerja selama 10 tahun
+	</p><hr>
 	
 </body>
 </html>
