Latihan 1.5: Menambahkan Gambar Profile

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 	<title>Tugas 1</title>
 </head>
 <body>
+	<img src="profile.jpg" alt="foto-profile" width="100px"/>
 	<h1>Ade Juhanas</h1>
-	<h1>Web Developer</h1><hr />
-	<h1>Profile</h1>
+	<h2>Web Developer</h2><hr />
+	<h2>Profile</h2>
 	<p>Assalamualaikum Perkenalkan nama saya Ade Juhanas, saya berasal dari concong luar, indragiri hilir, riau, asal sekolah saya SMKN 1 Tembilahan</p>
 	<p>
 		Saya Adalah Seorang full stack deeloper web dengan pengalaman kerja selama 10 tahun
