--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
 		Saya Adalah Seorang full stack deeloper web dengan pengalaman kerja selama 10 tahun
 	</p><hr>
 
+	<h1>My Skill</h1>
+    <ul>
+      <li>html</li>
+      <li>css</li>
+      <li>javascript</li>
+      <li>node js</li>
+      <li>vue js</li>
+      <li>nuxt js</li>
+      <li>progressive web application</li>
+      <li>push notification</li>
+      <li>web services</li>
+    </ul><hr />
 	
 </body>
 </html>
