Latihan 1.7: Menambahkan List Terurut

--- a/index.html
+++ b/index.html
@@ -27,6 +27,17 @@
       <li>push notification</li>
       <li>web services</li>
     </ul><hr />
+
+    <h1>Work Process</h1>
+    <ol>
+      <li>concept</li>
+      <li>sketch</li>
+      <li>design</li>
+      <li>code</li>
+      <li>test</li>
+      <li>publish</li>
+    </ol>
+    <hr />
 	
 </body>
 </html>
