Latihan 1.8: Menambahkan Tautan

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		Saya Adalah Seorang full stack deeloper web dengan pengalaman kerja selama 10 tahun
 	</p><hr>
 
-	<h1>My Skill</h1>
+	<h2>My Skill</h2>
     <ul>
       <li>html</li>
       <li>css</li>
@@ -28,7 +28,7 @@
       <li>web services</li>
     </ul><hr />
 
-    <h1>Work Process</h1>
+    <h2>Work Process</h2>
     <ol>
       <li>concept</li>
       <li>sketch</li>
@@ -39,5 +39,6 @@
     </ol>
     <hr />
 	
+	<h2><a href="contact.html" target="">Contact Me</a></h2>
 </body>
 </html>
