Latihan 2.1: Menambahkan Tabel Edukasi

--- a/index.html
+++ b/index.html
@@ -40,5 +40,38 @@
     <hr />
 	
 	<h2><a href="contact.html" target="">Contact Me</a></h2>
+
+  <h2>Education</h2>
+
+  <table border="1" width="70%">
+    <tr>
+      <td>year</td>
+      <td>school</td>
+      <td>location</td>
+
+    </tr>
+    <tr>
+      <td>2020-now</td>
+      <td>Universitas Islam Riau, S1 Teknik Informatika</td>
+      <td>Pekanbaru, Riau</td>
+    </tr>
+    <tr>
+      <td>2017-2020</td>
+      <td>SMKN1 TMBILAHAN</td>
+      <td>TEMBILAHAN</td>
+      
+    </tr>
+     <tr>
+    <td>2014-2017</td>
+    <td>SMPN1 CONCONG</td>
+    <td>CONCONGLUAR</td>
+
+    </tr>
+    <td>2008-2014</td>
+    <td>SDN002 CONCONG</td>
+    <td>CONCONGLUAR</td>
+
+  </table>
+  <hr>
 </body>
 </html>
