--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,30 @@
 	<title>contact</title>
 </head>
 <body>
+	<h1>contact</h1>
+
+	<form>
+		<p>
+			<label>Your name</label>
+			<input type="text" name= "name" >
+			
+		</p>
+		<p>
+			<label>Email address</label>
+			<input type="email" name="email">
+		</p>
+		<p>
+			<label>Budget</label>
+			<input type="number" name="Budget">
+
+		</p>
+		<p>
+			<label>Tell me about your project</label>
+			<textarea name="description"  cols="30" rows="10"></textarea>
+
+		</p>
+		<input type="submit">
+	</form>
 	
 </body>
 </html>
