--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<title>Tugas 1</title>
 </head>
 <body>
+  <h2><a href="index.html">login</a></h2>
+  
 	<img src="profile.jpg" alt="foto-profile" width="100px"/>
 	<h1>Ade Juhanas</h1>
 	<h2>Web Developer</h2><hr />
