--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=	, initial-scale=1.0">
 	<title>contact</title>
+	<link rel="stylesheet" href="main.css">
 </head>
 <body>
 	<h1>contact</h1>
@@ -29,6 +30,7 @@
 
 		</p>
 		<input type="submit">
+		
 	</form>
 	
 </body>
