--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Tugas 1</title>
+  <link rel="stylesheet" href="main.css">
 </head>
 <body>
   <h2><a href="index.html">login</a></h2>
