--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  <h2><a href="index.html">login</a></h2>
+  <ul id="navbar">
+    <li><h2><a href="index.html">Home</a></h2></li>
+    <li><h2><a href="register.html">register</a></h2></li>
+    <li><h2><a href="login.html">login</a></h2></li>
+    <li><h2><a href="contact.html">contact</a></h2></li>
+  </ul>
+ 
   
 	<img src="profile.jpg" alt="foto-profile" width="100px"/>
 	<h1>Ade Juhanas</h1>
@@ -42,7 +48,6 @@
     </ol>
     <hr />
 	
-	<h2><a href="contact.html" target="">Contact Me</a></h2>
 
   <h2>Education</h2>
 
