Latihan 3.11: Menambahkan Footer

--- a/index.html
+++ b/index.html
@@ -81,5 +81,9 @@
 
   </table>
   <hr>
+  <div class="footer">
+    <p>Copyright © 2021 ADEJUHANAS. All
+      Rights Reserved</p>
+  </div>
 </body>
 </html>
