Latihan 3.12: Mengcopy navbar ke halaman lainnya

--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,12 @@
 	<link rel="stylesheet" href="main.css">
 </head>
 <body>
+	<ul id="navbar">
+		<li><h2><a href="index.html">Home</a></h2></li>
+		<li><h2><a href="register.html">register</a></h2></li>
+		<li><h2><a href="login.html">login</a></h2></li>
+		<li><h2><a href="contact.html">contact</a></h2></li>
+	  </ul>
 	<h1>contact</h1>
 
 	<form>
