--- a/register.html
+++ b/register.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+    <ul id="navbar">
+        <li><h2><a href="index.html">Home</a></h2></li>
+        <li><h2><a href="register.html">register</a></h2></li>
+        <li><h2><a href="login.html">login</a></h2></li>
+        <li><h2><a href="contact.html">contact</a></h2></li>
+      </ul>
     <h1>Form Register</h1>
     <form>
         <p>
@@ -58,7 +64,6 @@
         <input type="submit" value="Register">
     </p>
     </form>
-    <h2><a href="index.html">Register</a></h2>
-    <h2><a href="login.html">Home</a></h2>
+
 </body>
 </html>
