Latihan 3.13: Mengcopy footer ke halaman lainnya

--- a/contact.html
+++ b/contact.html
@@ -38,6 +38,9 @@
 		<input type="submit">
 		
 	</form>
-	
+	<div class="footer">
+		<p>Copyright © 2021 ADEJUHANAS. All
+		  Rights Reserved</p>
+	  </div>
 </body>
 </html>
