--- a/login.html
+++ b/login.html
@@ -31,6 +31,9 @@
     </p>
 
     </form>
-    
+    <div class="footer">
+        <p>Copyright © 2021 ADEJUHANAS. All
+          Rights Reserved</p>
+      </div>
 </body>
 </html>
