--- a/register.html
+++ b/register.html
@@ -64,6 +64,9 @@
         <input type="submit" value="Register">
     </p>
     </form>
-
+    <div class="footer">
+        <p>Copyright © 2021 ADEJUHANAS. All
+          Rights Reserved</p>
+      </div>
 </body>
 </html>
