--- a/contact.html
+++ b/contact.html
@@ -13,31 +13,37 @@
 		<li><h2><a href="login.html">login</a></h2></li>
 		<li><h2><a href="contact.html">contact</a></h2></li>
 	  </ul>
-	<h1>contact</h1>
-
-	<form>
-		<p>
-			<label>Your name</label>
-			<input type="text" name= "name" >
-			
-		</p>
-		<p>
-			<label>Email address</label>
-			<input type="email" name="email">
-		</p>
-		<p>
-			<label>Budget</label>
-			<input type="number" name="Budget">
-
-		</p>
-		<p>
-			<label>Tell me about your project</label>
-			<textarea name="description"  cols="30" rows="10"></textarea>
-
-		</p>
-		<input type="submit">
+	  <div class="form-contact">
+		  <div class="content-form">
+			<form>
+				<h1>contact</h1>
+				<p>
+					<label>Your name</label>
+					<input type="text" name= "name" >
+					
+				</p>
+				<p>
+					<label>Email address</label>
+					<input type="email" name="email">
+				</p>
+				<p>
+					<label>Budget</label>
+					<input type="number" name="Budget">
 		
-	</form>
+				</p>
+				<p>
+					<label>Tell me about your project</label>
+					<textarea name="description"  cols="30" rows="10"></textarea>
+		
+				</p>
+				<input type="submit">
+				
+			</form>
+		  </div>
+	  </div>
+	
+
+	
 	<div class="footer">
 		<p>Copyright © 2021 ADEJUHANAS. All
 		  Rights Reserved</p>
