--- a/register.html
+++ b/register.html
@@ -10,9 +10,11 @@
 <body>
     <ul id="navbar">
         <li><h2><a href="index.html">Home</a></h2></li>
+        <li><h2><a href="portofolio.html">portofolio</a></h2></li>
+        <li><h2><a href="articles.html">articles</a></h2></li>
+        <li><h2><a href="contact.html">contact</a></h2></li>
         <li><h2><a href="register.html">register</a></h2></li>
         <li><h2><a href="login.html">login</a></h2></li>
-        <li><h2><a href="contact.html">contact</a></h2></li>
       </ul>
       <div class="form-register">
           <div class="content-form">
