--- a/articles.html
+++ b/articles.html
@@ -9,15 +9,14 @@
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"> -->
   </head>
   <body>
-    <div id="navbar">
-      <ul>
-        <li><h2><a href="index.html" target="">Home</a></h2></li>
-        <li><h2><a href="portofolio.html">Portofolio</a></h2></li>
-        <li><h2><a href="contactme..html" target="">Contact<a><h2></li>
-        <li><h2><a href="register.html">Register</a><br /></h2></li>
-        <li><h2><a href="login.html">Login</a></h2></li>
+    <ul id="navbar">
+        <li><h2><a href="index.html">Home</a></h2></li>
+        <li><h2><a href="portofolio.html">portofolio</a></h2></li>
+        <li><h2><a href="articles.html">articles</a></h2></li>
+        <li><h2><a href="contact.html">contact</a></h2></li>
+        <li><h2><a href="register.html">register</a></h2></li>
+        <li><h2><a href="login.html">login</a></h2></li>
       </ul>
-    </div>
     <div class="sidebar">
              <h1>Articles</h1>
             <ul>
