--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=	, initial-scale=1.0">
 	<title>contact</title>
 	<link rel="stylesheet" href="main.css">
+	<link rel="stylesheet" href="= https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
 </head>
 <body>
 	<ul id="navbar">
@@ -50,5 +51,7 @@
 		<p>Copyright © 2021 ADEJUHANAS. All
 		  Rights Reserved</p>
 	  </div>
+	  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+	  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
